tests/security/potentialTaintThroughChildClassSettingProperty/output.txt
ERROR: TaintedData - input.hack:16:6 - Detected tainted HTML tags